--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- 
+  Project: WhatsAPP ChatBot web application
+  Created: Sunday, 18 May 2025
+  Author: R Doondi Gangadhar
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
